--- a/app/src/main/res/layout/activity_confirm_sign_up_page.xml
+++ b/app/src/main/res/layout/activity_confirm_sign_up_page.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    tools:context=".activities.confirmSignUpPage"
     android:background="@drawable/login_bk"
     >
+
     <LinearLayout android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -20,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/loginHeader"
-            android:text="Register"
+            android:text="Confirmation"
             android:layout_marginTop="@dimen/loginViewsMargin"/>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -29,7 +32,7 @@
             android:layout_marginTop="@dimen/loginViewsMargin">
 
             <EditText
-                android:id="@+id/userName_signup"
+                android:id="@+id/userName_confirm"
                 style="@style/modifiedEditText"
                 android:hint="User name"
                 android:inputType="text"
@@ -37,35 +40,22 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/textInputEmail"
+            android:id="@+id/textInputCode"
             style="@style/parent"
             android:layout_marginTop="@dimen/loginViewsMargin">
 
             <EditText
-                android:id="@+id/email_signup"
+                android:id="@+id/code_confirm"
                 style="@style/modifiedEditText"
-                android:hint="@string/login_email_hint"
-                android:inputType="textEmailAddress"
-                android:maxLines="1" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/textInputPassword"
-            style="@style/parent"
-            android:layout_marginTop="@dimen/loginViewsMargin">
-
-            <EditText
-                android:id="@+id/password_signup"
-                style="@style/modifiedEditText"
-                android:hint="@string/login_password_hint"
-                android:inputType="textPassword"
+                android:hint="Confirm code"
+                android:inputType="text"
                 android:maxLines="1" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
-            android:id="@+id/signup"
+            android:id="@+id/confirm"
             style="@style/loginButton"
-            android:text="Signup"
+            android:text="Confirm"
             android:layout_gravity="right"
             android:layout_marginTop="@dimen/loginViewsMargin"/>
 
@@ -74,8 +64,9 @@
             android:textAlignment="textEnd"
             android:textStyle="bold"
             android:textColor="@color/primaryTextColor"
-            android:text="@string/login_signup_hint"
+            android:text="Didn't receive code?!"
             android:layout_marginTop="@dimen/loginViewsMargin"/>
 
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
