--- a/app/src/main/res/layout/activity_confirm_sign_up_page.xml
+++ b/app/src/main/res/layout/activity_confirm_sign_up_page.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.confirmSignUpPage"
-    android:background="@drawable/login_bk"
+    android:background="@drawable/backgroud"
     >
 
     <LinearLayout android:layout_width="match_parent"
