--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.LoginActivity"
-    android:background="@drawable/login_bk"
+    android:background="@drawable/backgroud"
     android:focusableInTouchMode="true">
 
     <include layout="@layout/layout_register"/>
