--- a/app/src/main/res/layout/activity_confirm_sign_up_page.xml
+++ b/app/src/main/res/layout/activity_confirm_sign_up_page.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.confirmSignUpPage"
-    android:background="@drawable/backgroud"
-    >
+    android:background="@drawable/backgroud">
 
     <LinearLayout android:layout_width="match_parent"
         android:layout_height="wrap_content"
