--- a/app/src/main/res/layout/activity_confirm_sign_up_page.xml
+++ b/app/src/main/res/layout/activity_confirm_sign_up_page.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.confirmSignUpPage"
+    tools:context=".activities.confirmSignUpActivity"
     android:background="@drawable/backgroud">
 
     <LinearLayout android:layout_width="match_parent"
