--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -8,7 +8,7 @@
     <pl.droidsonroids.gif.GifImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/glowingbubbles"
+        android:src="@drawable/two"
         android:scaleType="fitXY"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
