--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,5 +24,7 @@
     <color name="contentBodyColor">#FCFCFC</color>
     <color name="contentTextColor">#020000</color>
     <color name="miniTitleColor">#6F6A6A</color>
+    <color name="whiteBodyColor">#FCFCFC</color>
+
 
 </resources>
