finish design for add order

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -111,7 +111,7 @@
     </style>
 
 
-    <style name="centreLocatorCardDesign">
+    <style name="centreLocatologinButtonrCardDesign">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_centerInParent">true</item>
@@ -122,5 +122,10 @@
         <item name="android:layout_gravity">center</item>
     </style>
 
+    <style name="Add" parent="viewParent">
+        <item name="android:background">@drawable/login_button_bk</item>
+        <item name="android:textColor">@color/whiteTextColor</item>
+        <item name="android:textStyle">bold</item>
+    </style>
 
 </resources>
