fixnig relations bet activities and change the color of the action bar

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,7 +48,7 @@
                     <TextView
                         android:id="@+id/textViewSub1Title"
                         style="@style/viewParent.headerText.HomeCardTitle"
-                        android:text="Orders" />
+                        android:text="Add Order"/>
 
                     <TextView
                         style="@style/viewParent.headerText.homeCardContent"
