--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -128,4 +128,10 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+
+    <style name="pick_location_btn" parent="viewParent">
+        <item name="android:background">@drawable/pick_location_button</item>
+        <item name="android:textColor">@color/whiteTextColor</item>
+        <item name="android:textStyle">bold</item>
+    </style>
 </resources>
