--- a/app/src/main/res/layout/offers_layout.xml
+++ b/app/src/main/res/layout/offers_layout.xml
@@ -9,6 +9,15 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="30"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginVertical="5dp"
+        android:background="@drawable/header_offer"/>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="30"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginVertical="5dp"
         android:background="@drawable/offer1"/>
 
 </LinearLayout>
